force-app/main/default/objects/Skill_Association__c/Skill_Association__c.object-meta.xml
<CustomObject>
    <label>Skill Association</label>
    <nameField>
        <displayFormat>SA-{000000000}</displayFormat>
        <label>Association Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>