force-app/main/default/objects/Skill_Association__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Skill Associations</relationshipLabel>
    <relationshipName>Skill_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>