force-app/main/default/objects/Skill_Association__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Skill Associations</relationshipLabel>
    <relationshipName>Skill_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>