force-app/main/default/objects/Skill_Association__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Skill Associations</relationshipLabel>
    <relationshipName>Skill_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>