force-app/main/default/objects/Skill_Association__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Skill Associations</relationshipLabel>
    <relationshipName>Skill_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>