force-app/main/default/objects/Skill_Association__c/fields/LegacyObjectID__c.field-meta.xml
<CustomField>
    <fullName>LegacyObjectID__c</fullName>
    <externalId>true</externalId>
    <label>LegacyObjectID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>