force-app/main/default/objects/Skill_Association__c/fields/LegacyOpaID__c.field-meta.xml
<CustomField>
    <fullName>LegacyOpaID__c</fullName>
    <externalId>true</externalId>
    <label>LegacyOpaID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>