force-app/main/default/objects/Skill_Association__c/fields/LegacySkillID__c.field-meta.xml
<CustomField>
    <fullName>LegacySkillID__c</fullName>
    <externalId>true</externalId>
    <label>LegacySkillID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>