force-app/main/default/objects/Skill_Association__c/fields/OpaObjectName__c.field-meta.xml
<CustomField>
    <fullName>OpaObjectName__c</fullName>
    <description>account, contact, job - Opa Sync Object Name</description>
    <label>OpaObjectName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>