force-app/main/default/objects/Skill_Association__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill</label>
    <referenceTo>Skill__c</referenceTo>
    <relationshipLabel>Skill Associations</relationshipLabel>
    <relationshipName>Skill_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>