force-app/main/default/objects/Skill_Association__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
                <default>true</default>
                <label>Primary</label>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>